# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.xx
DATE 0x/xx/2009
24th Alpha Release

NEWS:


NEW: [features/enhancments]


BUG FIXES:
+Fix incorrect page count shown in print previews.

#-----------------------------------------------------------------------------#

VERSION 0.4.65
DATE 02/20/2009
23rd Alpha Release

NEWS:
This release contains a large number of bug fixes and improvements. Most notably
there has been a fair amount of work done on the autocompletions support. All
file types now have support for some basic word completion help. HTML and XML
now have support for smart input assistance and completion tips.

NEW: [features/improvments]
+Add autocompletion support for HTML/XML documents.
+Instantly start searching for selected text (Win/Lin Ctrl+F3, OSX Cmd+3)
+Launch adds support for OCaml (patch from quode),
 Batch scripts (patch from GaÎl), and LaTex.
+Shortcut for maximizing/minimizing the editor pane (patch from Rudi Pettazzi)
+Add menu entry for Fold All action (patch from Giuseppe "Cowo" Corbelli)
+Codebrowser adds support for XML/HTML (patch from Rudi Pettazzi)
+Codebrowser adds support for Vala, VBScript
+Some minor changes to the default hightlighting style. The old default is now
called Cream.
+Add simple generic autocompleter that provides completions based off of words
in the current buffer (Ctrl+Space). (patch from Giuseppe "Cowo" Corbelli)
+Add Move Tab to New Window option on tab context menu.
+Keyword helper functionality moved into the simple completer.

BUG FIXES:
+Update window being shown at same time as splash window causing lockups.
+Fix trim trailing whitespace from getting the wrong text position when certain
unicode characters are present.
+Add some missing JavaScript keywords (patch from Rudi Pettazzi)